--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/massage"/>
 
+
         <ImageView
             android:id="@+id/massage"
             android:layout_width="wrap_content"
@@ -71,9 +72,31 @@
             tools:layout_editor_absoluteX="290dp"
             tools:layout_editor_absoluteY="11dp" />
 
+        <Button
+            android:id="@+id/buttonRGB"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="RGB"
+            android:layout_margin="10px"
+            android:layout_below="@id/massage"/>
 
+        <Button
+            android:id="@+id/buttonCMY"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="CMY"
+            android:layout_margin="10px"
+            android:layout_below="@id/massage"
+            android:layout_toRightOf="@id/buttonRGB"/>
 
-
-    </RelativeLayout>
+        <Button
+            android:id="@+id/buttonOrigin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Original"
+            android:layout_margin="10px"
+            android:layout_below="@id/massage"
+            android:layout_toRightOf="@id/buttonCMY"/>
+</RelativeLayout>
 
 
